// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`connectorCommand CLI supports connector search with json output and omits schemas 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": 
"[{"authenticated":false,"description":"Send a Gmail message.","name":"send_mail","service":"gmail"}]
"
,
}
`;

exports[`connectorCommand CLI renders connector search output with field-specific colors 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": 
"gmail.send_mail
Send a Gmail message.
Authenticated: yes
"
,
}
`;

exports[`connectorCommand CLI validates the connector search format option 1`] = `
{
  "exitCode": 2,
  "stderr": 
"Invalid format: yaml. Use json.
"
,
  "stdout": "",
}
`;

exports[`connectorCommand CLI renders connector search help when text argument is omitted 1`] = `
{
  "expectedHelp": {
    "exitCode": 0,
    "stderr": "",
    "stdout": 
"Search connector actions.

Arguments:
  text                   Search text

Options:
  --format <format>      Specify output format (use json for structured output)
  --json                 Alias for --format=json
  --show-schema-version  Include schemaVersion in JSON output (no effect without
                         --json)
  -h, --help             Show help for command

Global Options:
  -V, --version          Show the current version
  --debug                Print the current log file path when the CLI exits
  --lang <lang>          Specify the display language
"
,
  },
  "result": {
    "exitCode": 0,
    "stderr": "",
    "stdout": 
"Search connector actions.

Arguments:
  text                   Search text

Options:
  --format <format>      Specify output format (use json for structured output)
  --json                 Alias for --format=json
  --show-schema-version  Include schemaVersion in JSON output (no effect without
                         --json)
  -h, --help             Show help for command

Global Options:
  -V, --version          Show the current version
  --debug                Print the current log file path when the CLI exits
  --lang <lang>          Specify the display language
"
,
  },
}
`;

exports[`connectorCommand CLI renders connector schema help with the json compatibility option 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": 
"Show the schema contract for one connector action.

Arguments:
  serviceName            Service name

Options:
  -a, --action <action>  Specify the target action name
  --refresh              Bypass any cached response and fetch fresh data
  --json                 Accepted for compatibility; output is always JSON
  -h, --help             Show help for command

Global Options:
  -V, --version          Show the current version
  --debug                Print the current log file path when the CLI exits
  --lang <lang>          Specify the display language

Commands:
  refresh                Clear connector action schema cache
  help [command]         Show help for a command
"
,
}
`;

exports[`connectorCommand CLI renders connector schema refresh help 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": 
"Clear all locally cached connector action schemas.

Options:
  -h, --help     Show help for command

Global Options:
  -V, --version  Show the current version
  --debug        Print the current log file path when the CLI exits
  --lang <lang>  Specify the display language
"
,
}
`;

exports[`connectorCommand CLI supports connector run with cached schema and json output 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": 
"{"data":{"messageId":"message-1"},"meta":{"executionId":"exec-1"}}
"
,
}
`;

exports[`connectorCommand CLI loads connector action metadata and supports dry-run when the schema cache is missing 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": 
"{"dryRun":true,"ok":true}
"
,
}
`;

exports[`connectorCommand CLI validates connector run payloads before sending the action request 1`] = `
{
  "exitCode": 2,
  "stderr": 
"The connector action input payload is invalid: data/to must match format "email"
"
,
  "stdout": "",
}
`;

exports[`connectorCommand CLI supports connector schema with default json output and hides internal metadata fields 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": 
"{"description":"Send a Gmail message.","inputSchema":{"properties":{"to":{"type":"string"}},"required":["to"],"type":"object"},"name":"send_mail","outputSchema":{"type":"object"},"service":"gmail"}
"
,
}
`;

exports[`connectorCommand CLI supports connector schema refresh subcommand by clearing cached metadata 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": 
"Cleared locally cached connector action schemas.
"
,
}
`;

exports[`connectorCommand CLI supports connector search with text output without caching schema-less results 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": 
"gmail.send_mail
Send a Gmail message.
Authenticated: yes
"
,
}
`;
